// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      You have 
      <span>
        1
      </span>
       
      <span>
        expense
      </span>
       totaling 
      <span>
        $2.35
      </span>
    </h1>
    <span>
      Showing 
      1
       out of 
       Expenses.
    </span>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      You have 
      <span>
        23
      </span>
       
      <span>
        expenses
      </span>
       totaling 
      <span>
        $2.35
      </span>
    </h1>
    <span>
      Showing 
      23
       out of 
       Expenses.
    </span>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
